--- a/browser/js/management/management.html
+++ b/browser/js/management/management.html
@@ -4,11 +4,16 @@
   <div class="flex-container-row">
     <button class="sqn-btn sqn-btn-flex" ui-sref-active="sqn-btn-active" ng-repeat="managementView in areasToManage" ui-sref="{{ managementView.state }}">{{ managementView.title }}</button>
   </div>
-  <div class="flex-container-row">
+  <section class="flex-container-row">
+    <header class="stats-header">
+      <h4>Event Stats</h4>
+    </header>
     <dashboard-event-panel ng-repeat="evt in allEvents" evt="evt" categories="allCategories"></dashboard-event-panel>
-  </div>
-  <div>
-
-  </div>
-
+  </section>
+  <section class="flex-container-row">
+    <header class="stats-header">
+      <h4>Platform Stats</h4>
+    </header>
+    <dashboard-platform-panel ng-repeat="platform in allPlatforms" platformdata="platform" evts="allEvents"></dashboard-platform-panel>
+  </section>
 </section>
