--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -1,4 +1,5 @@
 <active-chat-panel user="user"></active-chat-panel>
+<attendee-event-details></attendee-event-details>
 <section id="user-profile" class="container-fluid">
   <div class="row">
     <div class="flex-container-row attendee-header">
