--- a/browser/js/common/directives/attendee-event/attendee-event.html
+++ b/browser/js/common/directives/attendee-event/attendee-event.html
@@ -4,12 +4,15 @@
     <h5>{{ evt.date }} | <display-time modeltime="evt.startTime"></display-time> - <display-time modeltime="evt.endTime"></display-time></h5>
   </header>
   <div class="attend-event-options" ng-show="!attending">
-    <button class="sqn-btn-positive" ng-disabled="!available" ng-click="attendEvent(evt.$id)"> Register for Event</button>
+    <button class="sqn-btn-positive" ng-disabled="!available" ng-click="attendEvent(evt.$id)">Register for Event</button>
   </div>
   <div ng-show="attending" class="attend-event-options">
     <button class="sqn-btn" ng-show="available" ng-click="addGuest()">{{ guestLabel }}</button>
     <button class="sqn-btn-danger" ng-click="removeFromEvent(evt.$id)">Cancel Attendance</button>
   </div>
+</section>
+<section class="flex-container-row display-event-details" ng-class="{'status-attending': attending, 'status-not-attending': !attending }">
+  <button class="sqn-btn-inverse" ng-click="showDetails()">Show Event Details</button>
 </section>
 <hr>
 <section class="attendee-aeg" ng-class="{'status-attending': attending, 'status-not-attending': !attending }">
