Working on restyling homepage after adding background video.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,32 +1,28 @@
-<section id="home" class="container-fluid">
-  <div id="main-title" class="row">
-    <div class="col-xs-6 col-xs-offset-6 col-sm-5 col-md-5 col-lg-5 home-side-panel">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 home-title">
-        <h3>5 Squadron</h3>
-        <span>ROYAL NEW ZEALAND AIR FORCE</span>
-      </div>
-      <serve-nz-banner class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-spanning-oceans">
-      </serve-nz-banner>
-      <orion-banner class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions"></orion-banner>
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-blurb">
-        <p>75 years spanning the oceans, built on the dedication of men and women like you.</p>
-        <p>Celebrate the distinguished heritage you helped build.</p>
-        <div class="anniversary-date-banner">
-          <h3>23-24 September 2016</h3>
-          <p>Auckland, New Zealand</p>
-          <span>To attend please register or login above</span>
+<section id="home">
+  <video class="background-media" poster="/images/home/crest-overalls-002.jpg" autoplay loop>
+    <source src="/video/Sequence 01_4_2.mp4" type="video/mp4"></source>
+  </video>
+  <img src="/images/home/crest-overalls-002.jpg" class="background-media"></img>
+  <section class="home-main-title">
+    <div class="">
+      <h1 class="home-title-text">No.5 Squadron</h1>
+      <span class="home-title-text">ROYAL NEW ZEALAND AIR FORCE</span>
+    </div>
+  </section>
+  <section class="home-description">
+    <section class="home-description-header">
+      <h3><em>"Keitou Kalawaca Na Wasaliwa"</em></h3>
+      <h2>Celebrating 75 years of spanning the oceans</h2>
+      <h3 class="home-period">1941 - 2016</h3>
+    </section>
+    <section class="flex-container-row home-description-content">
+        <div class="intro-blurb orion-blurb">
+          <p class="home-intro-blurb">...and 50 years of operating the venerable P-3 Orion</p>
+        </div>
+        <div class="intro-blurb">
+          <p class="home-intro-blurb people-blurb">Help commemorate 75 years of 5 Squadron, built on the dedication and service of men and women like you.</p>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row home-description">
-    <div class="anniversary-date-banner">
-      <h3>23-24 September 2016</h3>
-      <p>Auckland, New Zealand</p>
-      <span>To attend please register or login above</span>
-    </div>
-    <serve-nz-banner class="col-xs-12 col-sm-12 col-md-6 col-lg-6 tile-spanning-oceans">
-    </serve-nz-banner>
-    <orion-banner class="col-xs-12 col-sm-12 col-md-12 col-lg-12 tile-orions"></orion-banner>
-  </div>
+    </section>
+  </section>
 </section>
