Working on tidying up responive details for deployment.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,6 +1,6 @@
 <section id="home">
   <video class="background-media" poster="/images/home/crest-overalls-002.jpg" autoplay loop>
-    <source src="/video/Sequence 01_4_2.mp4" type="video/mp4"></source>
+    <source src="/video/5sqn-anniversary-intro_deploy.mp4" type="video/mp4"></source>
   </video>
   <img src="/images/home/crest-overalls-002.jpg" class="background-media"></img>
   <section class="home-main-title">
@@ -19,10 +19,27 @@
         <div class="intro-blurb orion-blurb">
           <p class="home-intro-blurb">...and 50 years of operating the venerable P-3 Orion</p>
         </div>
-        <div class="intro-blurb">
-          <p class="home-intro-blurb people-blurb">Help commemorate 75 years of 5 Squadron, built on the dedication and service of men and women like you.</p>
+        <div class="intro-blurb people-blurb">
+          <p class="home-intro-blurb">Help commemorate 75 years of the squadron serving New Zealand, built on the dedication of men and women like you.</p>
         </div>
       </div>
+    </section>
+    <section class="home-events">
+      <header class="home-events-title">
+        <h3>23 - 24 September 2016</h3>
+        <p>Auckland, New Zealand</p>
+      </header>
+      <div class="flex-container-row space-between">
+        <div class="home-event" ng-repeat="evt in allEvents">
+          <h4 ng-bind="evt.name"></h4>
+          <p ng-bind="evt.date"></p>
+        </div>
+      </div>
+      <footer>
+        <h4>Please <a ui-sref="newAttendee" class="sqn-btn-positive">Register</a> to attend the anniversary events and find out more information.</h4>
+        <h4>We look forward to welcoming you back.</h4>
+        <p class="home-footer">Site built by 5 Squadron member, 2016 (<a href=https://github.com/sunilunka/5sqnAnniversary>Github</a>)</p>
+      </footer>
     </section>
   </section>
 </section>
