--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -20,8 +20,12 @@
     </div>
   </div>
   <div class="info-banner" ng-show="registerMethodChosen === null">
-    <p>Registering will allow you to login and monitor any announcements regarding the event.</p>
-    <p>It will also allow you to add any guests coming to the events, change your attendance status if plans change, and more.</p>
+    <p>As well as acting as your official RSVP for anniversary events, registering will allow you access to the many features of the anniversary site including:</p>
+      <ul>
+        <li>adding and removing guests who are accompanying you to events, </li>
+        <li>changing if you are attending an event,</li>
+        <li>searching for and chatting with other attendees through instant messaging, as not everyone is on social media,</li>
+      </ul>
   </div>
   <div ng-hide="registerMethodChosen === null" ui-view></div>
 </section>
