Completed basic styling of home page with video.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -17,7 +17,7 @@
     </section>
     <section class="flex-container-row home-description-content">
         <div class="intro-blurb orion-blurb">
-          <p class="home-intro-blurb">...and 50 years of operating the venerable P-3 Orion</p>
+          <p class="home-intro-blurb">...and <strong>50 years</strong> of operating the venerable <strong>Lockheed Martin P-3 Orion</strong></p>
         </div>
         <div class="intro-blurb people-blurb">
           <p class="home-intro-blurb">Help commemorate 75 years of the squadron serving New Zealand, built on the dedication of men and women like you.</p>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <footer>
-        <h4>Please <a ui-sref="newAttendee" class="sqn-btn-positive">Register</a> to attend the anniversary events and find out more information.</h4>
+        <h4>Please <a ui-sref="newAttendee" class="home-register">Register</a> to attend the anniversary events and find out more information.</h4>
         <h4>We look forward to welcoming you back.</h4>
         <p class="home-footer">Site built by 5 Squadron member, 2016 (<a href=https://github.com/sunilunka/5sqnAnniversary>Github</a>)</p>
       </footer>
