Real time management status updated so ui reflects removal.

--- a/browser/js/messaging/messaging-session.html
+++ b/browser/js/messaging/messaging-session.html
@@ -8,7 +8,7 @@
             <h5>Current Chat</h5>
           </div>
           <div class="messaging-tab-selector" ng-class="{'tab-active': activeTab === 'members'}" ng-click="viewSelector('members')">
-            <h5>Members</h5>
+            <h5>Chat Members</h5>
           </div>
           <div class="messaging-tab-selector" ng-class="{'tab-active': activeTab === 'search'}" ng-click="viewSelector('search')">
             <h5>Search Contacts</h5>
@@ -35,7 +35,7 @@
       <div class="tab-selector-large">
         <div class="flex-container-row">
           <div class="messaging-tab-selector" ng-class="{'tab-active': activeTab === 'members'}" ng-click="viewSelector('members')">
-            <h4>Members</h4>
+            <h4>Chat Members</h4>
           </div>
           <div class="messaging-tab-selector" ng-class="{'tab-active': activeTab === 'search'}" ng-click="viewSelector('search')">
             <h4>Search Contacts</h4>
