--- a/browser/js/shop/shop.html
+++ b/browser/js/shop/shop.html
@@ -1,3 +1,14 @@
-<section class="shop-storefront">
-
+<section class="shop-storefront container-fluid">
+  <header class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h2>Welcome to the 5 Squadron Store</h2>
+    </div>
+  </header>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 shop-products-collection">
+    <h4>75th Anniversary Swag</h4>
+  </div>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <shop-product product="product" ng-repeat="product in collectionProducts" class="col-xs-12 col-sm-6 col-md-6 col-lg-12 shop-product">
+    </shop-product>
+  </div>
 </section>
