Working on cart display. Once complete will be moving onto adding and removing items from a cart.

--- a/browser/js/shop/shop.html
+++ b/browser/js/shop/shop.html
@@ -1,3 +1,4 @@
+<shop-cart></shop-cart>
 <section class="shop-storefront container-fluid">
   <header class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -8,7 +9,7 @@
     <h4>75th Anniversary Swag</h4>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <shop-product product="product" ng-repeat="product in collectionProducts" class="col-xs-12 col-sm-6 col-md-6 col-lg-12 shop-product">
-    </shop-product>
+    <shop-front-product product="product" ng-repeat="product in collectionProducts" class="col-xs-12 col-sm-6 col-md-6 col-lg-12">
+    </shop-front-product>
   </div>
 </section>
