--- a/browser/js/shopProduct/shopProduct.html
+++ b/browser/js/shopProduct/shopProduct.html
@@ -1,3 +1,4 @@
+<shop-cart></shop-cart>
 <section class="shop-product-page container-fluid">
   <div class="row">
     <header class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -9,7 +10,7 @@
       </button>
     </div>
     <footer class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <form name="addProductToCart" ng-submit="addProductToCart()">
+      <form name="addProductToBuy" ng-submit="addProductToCart()">
         <label>How many would you like?</label>
         <input type="number" ng-model="quantity" min="0" max="50" class="sqnInputNumber-wide"></input>
         <input type="submit" class="sqn-btn-positive" value="Add To Cart"></input>
