--- a/browser/js/common/directives/shop-cart/shop-cart.html
+++ b/browser/js/common/directives/shop-cart/shop-cart.html
@@ -1,13 +1,16 @@
 <section class="flex-container-row">
   <h3><span class="glyphicon glyphicon-shopping-cart"></span></h3>
   <span ng-bind="itemCount"></span><span> items</span>
-  <button class="sqn-btn" ng-click="toggleShowItems()">Show/Modify your items</button>
+  <span ng-bind="subTotal"></span>
+  <button class="sqn-btn" ng-click="toggleShowItems()" ng-bind="showItemLabel"></button>
+  <button class="sqn-btn-positive" ng-click="checkoutCart()">Checkout</button>
 </section>
 <section ng-if="showItems">
   Butts!
-  <div ng-repeat="item in lineItems">
+  <div class="item-order-mod" ng-repeat="item in items">
     <h4 ng-bind="item.title"></h4>
-    <input type="sqnInputNumber-wide"></input>
-    <button class="sqn-btn"><span class="glyphicon glyphicon-plus"></span></button><button><span class="glyphicon glyphicon-minus"></span></button>
+    <input type="number" class="sqnInputNumber" ng-model="item.quantity"></input>
+    <button class="sqn-btn"><span class="glyphicon glyphicon-plus"></span></button><button class="sqn-btn"><span class="glyphicon glyphicon-minus"></span></button>
+    <button class="sqn-btn-danger">Remove Item(s)</button>
   </div>
 </section>
