--- a/browser/js/common/directives/header-bar/header-bar.html
+++ b/browser/js/common/directives/header-bar/header-bar.html
@@ -1,6 +1,7 @@
 <section id="header-bar" class="flex-container-row">
   <div class="header-item-menu">
-    <button class="sqn-btn-header" ui-sref="home">Home</button>
+    <a class="sqn-btn-header" ui-sref="home">Home</a>
+    <a class="sqn-btn-header" ui-sref="shopFront">Shop</a>
   </div>
   <div ng-hide="currentUser" class="header-item-user" ng-cloak>
     <button class="sqn-btn-header" ui-sref="newAttendee">Register</button>
@@ -8,7 +9,7 @@
   </div>
   <div ng-show="currentUser" class="header-item-user" ng-cloak>
     <button ng-click="goToUserProfile()" class="sqn-btn-header">Profile</button>
-    <button ng-show="isManager" class="sqn-btn-header" ui-sref="management">Site Management</button>
+    <a ng-show="isManager" class="sqn-btn-header" ui-sref="management">Site Management</a>
     <button ng-click="logoutUser()" class="sqn-btn-header">Logout</button>
   </div>
 </section>
