Have basic variant adding working. Now need to work on quantity, then styling.

--- a/browser/js/common/directives/cart-product/cart-product.html
+++ b/browser/js/common/directives/cart-product/cart-product.html
@@ -1,6 +1,8 @@
 <li>
-  <h4 ng-bind="lineitem.title"></h4>
-  <input type="number" class="sqnInputNumber" ng-model="item.quantity"></input>
+  <div class="flex-container-row">
+    <h4 ng-bind="lineitem.title"></h4>  <button class="sqn-btn-danger" ng-click="removeCartItem()">Remove</button>
+  </div>
+  <div><span ng-bind="lineitem.variant_title"></span></div>
+  <input type="number" class="sqnInputNumber" ng-model="lineitem.quantity"></input>
   <button class="sqn-btn"><span class="glyphicon glyphicon-plus"></span></button><button class="sqn-btn"><span class="glyphicon glyphicon-minus"></span></button>
-  <button class="sqn-btn-danger" ng-click="removeCartItem()">Remove Item(s)</button>
 </li>
