--- a/browser/js/common/directives/shop-cart/shop-cart.html
+++ b/browser/js/common/directives/shop-cart/shop-cart.html
@@ -5,8 +5,7 @@
   <button class="sqn-btn" ng-click="toggleShowItems()" ng-bind="showItemLabel"></button>
   <button class="sqn-btn-positive" ng-click="checkoutCart()">Checkout</button>
 </section>
-<section ng-if="showItems">
-  Butts!
+<section ng-if="showItems" class="flex-container-row">
   <cart-product class="item-order-mod" lineitem="item" ng-repeat="item in items">
   </cart-product>
 </section>
