Working on setting items available. This is a work in progress.

--- a/browser/js/common/directives/shop-front-product/shop-front-product.html
+++ b/browser/js/common/directives/shop-front-product/shop-front-product.html
@@ -1,6 +1,6 @@
 <a ui-sref="shopProduct({ productId: product.id })">
   <h4 ng-bind="title"></h4>
-  <img src=""></img>
+  <img src="{{ imageSrc }}"></img>
   <div class="product-options">
   </div>
 </a>
