Updated home page with ogg and webm formats.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,6 +1,8 @@
 <section id="home">
   <video class="background-media" poster="/images/home/crest-overalls-002.jpg" autoplay loop>
     <source src="/video/5sqn-anniversary-intro_deploy.mp4" type="video/mp4"></source>
+    <source src="/video/5sqn-anniversary-intro_deploy.webm" type="video/webm"></source>
+    <source src="/video/5sqn-anniversary-intro_deploy.ogg" type="video/ogg"></source>
   </video>
   <img src="/images/home/crest-overalls-002.jpg" class="background-media"></img>
   <section class="home-main-title">
