Added watch and replication of HTML templates into the public/js folder for ease of build.

--- a/public/js/common/directives/header-bar/header-bar.html
+++ b/public/js/common/directives/header-bar/header-bar.html
@@ -1,6 +1,7 @@
 <section id="header-bar" class="flex-container-row">
   <div class="header-item-menu">
     <a class="sqn-btn-header" ui-sref="home">Home</a>
+    <a class="sqn-btn-header" ui-sref="shopFront">Shop</a>
   </div>
   <div ng-hide="currentUser" class="header-item-user" ng-cloak>
     <button class="sqn-btn-header" ui-sref="newAttendee">Register</button>
