--- a/browser/js/shopProduct/shopProduct.html
+++ b/browser/js/shopProduct/shopProduct.html
@@ -11,17 +11,19 @@
       </div>
       <img src="{{ product.images[0].src }}"></img>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" ng-repeat="option in product.options">
-      <h5>{{ option.name }}</h5>
-      <button ng-class="{'product-option-selected': value === option.value }" class="sqn-btn sqn-btn-product" ng-repeat="value in option.values" ng-bind="value" ng-click="updateSelectedVariant(option, value)">
-      </button>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <div class="product-option" ng-repeat="option in product.options">
+        <h5>{{ option.name }}</h5>
+        <button ng-class="{'product-option-selected': value === option.value }" class="sqn-btn sqn-btn-product" ng-repeat="value in option.values" ng-bind="value" ng-click="updateSelectedVariant(option, value)">
+        </button>
+      </div>
+      <footer class="product-option">
+        <form name="addProductToBuy" ng-submit="addProductToCart()">
+          <label>How many would you like?</label>
+          <input type="number" ng-model="quantity" min="0" max="50" class="sqnInputNumber-wide"></input>
+          <input type="submit" class="sqn-btn-positive" value="Add To Cart" ng-disabled="notAvailable" ng-class="{'sqn-btn-disabled': notAvailable }"></input>
+        </form>
+      </footer>
     </div>
-    <footer class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <form name="addProductToBuy" ng-submit="addProductToCart()">
-        <label>How many would you like?</label>
-        <input type="number" ng-model="quantity" min="0" max="50" class="sqnInputNumber-wide"></input>
-        <input type="submit" class="sqn-btn-positive" value="Add To Cart" ng-disabled="notAvailable" ng-class="{'sqn-btn-disabled': notAvailable }"></input>
-      </form>
-    </footer>
   </div>
 </section>
