--- a/public/js/common/directives/cart-product/cart-product.html
+++ b/public/js/common/directives/cart-product/cart-product.html
@@ -2,7 +2,7 @@
   <div class="flex-container-row">
     <h4 ng-bind="lineitem.title"></h4>  <button class="sqn-btn-danger" ng-click="removeCartItem()">Remove</button>
   </div>
-  <div><span ng-bind="lineitem.variant_title"></span></div>
+  <div class="cart-product-variant"><span ng-bind="lineitem.variant_title"></span></div>
   <input type="number" class="sqnInputNumber" ng-model="lineitem.quantity"></input>
-  <button class="sqn-btn"><span class="glyphicon glyphicon-plus"></span></button><button class="sqn-btn"><span class="glyphicon glyphicon-minus"></span></button>
+  <button class="sqn-btn item-quantity-btn" ng-click="updateQuantity('increment')"><span class="glyphicon glyphicon-plus"></span></button><button class="sqn-btn item-quantity-btn" ng-click="updateQuantity('decrement')"><span class="glyphicon glyphicon-minus"></span></button>
 </li>
