--- a/public/js/common/directives/cart-product/cart-product.html
+++ b/public/js/common/directives/cart-product/cart-product.html
@@ -4,5 +4,5 @@
   </div>
   <div class="cart-product-variant"><span ng-bind="lineitem.variant_title"></span></div>
   <input type="number" class="sqnInputNumber" ng-model="lineitem.quantity"></input>
-  <button class="sqn-btn item-quantity-btn" ng-click="updateQuantity('increment')"><span class="glyphicon glyphicon-plus"></span></button><button class="sqn-btn item-quantity-btn" ng-click="updateQuantity('decrement')"><span class="glyphicon glyphicon-minus"></span></button>
+  <button class="sqn-btn item-quantity-btn" ng-click="updateQuantity('increment')" ng-disabled="processingUpdate"><span class="glyphicon glyphicon-plus"></span></button><button class="sqn-btn item-quantity-btn" ng-click="updateQuantity('decrement')" ng-disabled="processingUpdate"><span class="glyphicon glyphicon-minus"></span></button>
 </li>
