--- a/public/js/common/directives/shop-cart/shop-cart.html
+++ b/public/js/common/directives/shop-cart/shop-cart.html
@@ -1,9 +1,13 @@
 <section class="flex-container-row">
   <h3><span class="glyphicon glyphicon-shopping-cart"></span></h3>
-  <span ng-bind="itemCount"></span><span> items</span>
-  <span ng-bind="subTotal"></span>
-  <button class="sqn-btn" ng-click="toggleShowItems()" ng-bind="showItemLabel"></button>
-  <button class="sqn-btn-positive" ng-click="checkoutCart()">Checkout</button>
+  <div class="cart-stats">
+    <span ng-bind="itemCount"></span><span class="stats-separator"> items</span>
+    <span>Total: </span><span ng-bind="subTotal | currency "></span>
+  </div>
+  <div class="cart-options">
+    <button class="sqn-btn" ng-click="toggleShowItems()" ng-bind="showItemLabel"></button>
+    <button class="sqn-btn-positive" ng-click="checkoutCart()">Checkout</button>
+  </div>
 </section>
 <section ng-if="showItems">
   <ul class="flex-container-row">
