--- a/browser/js/common/directives/event-guest-limit/event-guest-limit.html
+++ b/browser/js/common/directives/event-guest-limit/event-guest-limit.html
@@ -6,6 +6,6 @@
   </div>
   <div class="flex-container-row event-limit-options">
     <input type="submit" class="sqn-btn-positive" value="Update"></input>
-    <button class="sqn-btn" ng-click="cancelEdit()">Cancel</button>
+    <button class="sqn-btn" ng-click="cancelEdit($event)">Cancel</button>
   </div>
 </form>
